--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "cmdk": "^1.1.1",
     "cookies-next": "^6.1.0",
     "framer-motion": "^12.23.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "next": "15.2.4",
+    "node-cron": "^4.2.1",
     "openai": "^5.12.2",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
@@ -48,11 +50,13 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
+    "winston": "^3.17.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
