added a setup for migration

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --port 3001",
-    "build": "yarn prisma:generate && next build",
-    "start": "next start -p $WEB_PORT",
+    "build": "yarn prisma:migrate && yarn prisma:generate && next build",
+    "start": "next start -p 3001",
     "lint": "next lint",
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
     "prisma:generate": "yarn prisma generate",
