--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --port 3001",
-    "build": "yarn prisma:migrate && yarn prisma:generate && next build",
+    "build": "yarn prisma:generate && next build",
     "start": "next start -p $WEB_PORT",
     "lint": "next lint",
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
