fix: setting up nodemailer.

--- a/.example.env
+++ b/.example.env
@@ -12,3 +12,8 @@ LLM_PROVIDER=GEMINI
 GEMINI_API_KEY=
 # Gemini model to use : We recommend gemini-2.5-flash-preview-04-17
 GEMINI_MODEL=gemini-2.5-flash-preview-04-17
+
+# EMAIL
+SMTP_USER="<Your email user>"
+SMTP_SECURE=false
+SMTP_PASS=""
