--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "moment": "^2.30.1",
     "next": "15.2.4",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5",
     "openai": "^5.12.2",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
@@ -60,6 +61,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.10",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "cross-env": "^7.0.3",
