fix: prisma migration and ai model

--- a/.example.env
+++ b/.example.env
@@ -10,8 +10,8 @@ LLM_PROVIDER=GEMINI
 # If GEMINI: Your Google API key
 # You can get one here : https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=
-# Gemini model to use : We recommend gemini-2.5-flash-preview-04-17
-GEMINI_MODEL=gemini-2.5-flash-preview-04-17
+# Gemini model to use. We recommend gemini-2.5-flash-lite or gemini-2.5-pro
+GEMINI_MODEL=gemini-2.5-pro
 
 # EMAIL
 SMTP_USER="<Your email user>"
